2003-01-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* supplements.am: Remove AM_MAKEINFOFLAGS, TEXI2DVI, TEXI2PDF.

2003-01-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* supplements.am: Use automake rules to build ps, pdf, info.
	Various minor changes.

2002-12-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* supplement.am: Append -I $(topsrc_dir) to AM_MAKEINFOFLAGS.

2002-07-30	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Added arm subdirectory.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-02-14	Joel Sherrill <joel@OARcorp.com>

	* mips: New supplement.

2002-01-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* supplement.am: Replace TEXI_COMMON with AM_MAKEINFOFLAGS.

2002-01-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Require automake-1.5.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.